--- a/views/index.html
+++ b/views/index.html
@@ -56,93 +56,7 @@
 <body>
 
 <div class="body">
-    <header id="header"
-            data-plugin-options="{'stickyEnabled': true, 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': true, 'stickyStartAt': 57, 'stickySetTop': '-57px', 'stickyChangeLogo': true}">
-        <div class="header-body">
-            <div class="header-container container">
-                <div class="header-row">
-                    <div class="header-column">
-                        <div class="header-logo">
-                            <a href="index.html">
-                                <img alt="ItCleanup" width="333" height="162" src="img/logo.png">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="header-column">
-                        <div class="header-row">
-                            <div class="header-search hidden-xs">
-                                <form id="searchForm" action="page-search-results.html" method="get">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" name="q" id="q" placeholder="Search..."
-                                               required>
-                                        <span class="input-group-btn">
-													<button class="btn btn-default" type="submit"><i
-                                                            class="fa fa-search"></i></button>
-												</span>
-                                    </div>
-                                </form>
-                            </div>
-                            <nav class="header-nav-top">
-                                <ul class="nav nav-pills">
-                                    <li class="hidden-xs">
-                                        <a href="about-us.html"><i class="fa fa-angle-right"></i> About Us</a>
-                                    </li>
-                                    <li class="hidden-xs">
-                                        <a href="contact-us.html"><i class="fa fa-angle-right"></i> Contact Us</a>
-                                    </li>
-                                    <li>
-                                        <span class="ws-nowrap"><i class="fa fa-phone"></i> (650) 787-3966</span>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                        <div class="header-row">
-                            <div class="header-nav">
-                                <button class="btn header-btn-collapse-nav" data-toggle="collapse"
-                                        data-target=".header-nav-main">
-                                    <i class="fa fa-bars"></i>
-                                </button>
-                                <ul class="header-social-icons social-icons hidden-xs">
-                                    <li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank"
-                                                                         title="Facebook"><i class="fa fa-facebook"></i></a>
-                                    </li>
-                                    <li class="social-icons-twitter"><a href="http://www.twitter.com/" target="_blank"
-                                                                        title="Twitter"><i
-                                            class="fa fa-twitter"></i></a>
-                                    </li>
-                                    <li class="social-icons-linkedin"><a href="http://www.linkedin.com/" target="_blank"
-                                                                         title="Linkedin"><i class="fa fa-linkedin"></i></a>
-                                    </li>
-                                </ul>
-                                <div class="header-nav-main header-nav-main-effect-1 header-nav-main-sub-effect-1 collapse">
-                                    <nav>
-                                        <ul class="nav nav-pills" id="mainNav">
-                                            <li class="">
-                                                <a href="index.html">
-                                                    HOME
-                                                </a>
-                                            </li>
-
-                                            <li class="">
-                                                <a href="about-us.html">
-                                                    About Us
-                                                </a>
-                                            </li>
-                                            <li class="">
-                                                <a href="contact-us.html">
-                                                    Contact Us
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+    {% include "templates/header.html" %}
 
     <div role="main" class="main">
 
@@ -217,7 +131,7 @@
                         <div class="col-md-4">
                             <div class="get-started">
                                 <a href="#" class="btn btn-lg btn-primary">Get Started Now!</a>
-                                <div class="learn-more">or <a href="index.html">learn more.</a></div>
+                                <div class="learn-more">or <a href="/">learn more.</a></div>
                             </div>
                         </div>
                     </div>
@@ -413,86 +327,7 @@
 
     </div>
 
-    <footer id="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-ribbon">
-                    <span>Get in Touch</span>
-                </div>
-                <div class="col-md-3">
-                    <div class="newsletter">
-                        <h4>Newsletter</h4>
-                        <p>Keep up on our always evolving product features and technology. Enter your e-mail and
-                            subscribe to our newsletter.</p>
-
-                        <div class="alert alert-success hidden" id="newsletterSuccess">
-                            <strong>Success!</strong> You've been added to our email list.
-                        </div>
-
-                        <div class="alert alert-danger hidden" id="newsletterError"></div>
-
-                        <form id="newsletterForm" action="php/newsletter-subscribe.php" method="POST">
-                            <div class="input-group">
-                                <input class="form-control" placeholder="Email Address" name="newsletterEmail"
-                                       id="newsletterEmail" type="text">
-                                <span class="input-group-btn">
-											<button class="btn btn-default" type="submit">Go!</button>
-										</span>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <h4>Latest Tweets</h4>
-                    <div id="tweet" class="twitter" data-plugin-tweets
-                         data-plugin-options="{'username': '', 'count': 2}">
-                        <p>Please wait...</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="contact-details">
-                        <h4>Contact Us</h4>
-                        <ul class="contact">
-                            <li><p><i class="fa fa-map-marker"></i> <strong>Address:</strong> 34754 Siward Dr, Fremont,
-                                California 94555, United States</p></li>
-                            <li><p><i class="fa fa-phone"></i> <strong>Phone:</strong> (650) 787-3966</p></li>
-                            <li><p><i class="fa fa-envelope"></i> <strong>Email:</strong> <a
-                                    href="mailto:mail@example.com">info@itcleanup.com</a></p></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <h4>Follow Us</h4>
-                    <ul class="social-icons">
-                        <li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank"
-                                                             title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                        <li class="social-icons-twitter"><a href="http://www.twitter.com/" target="_blank"
-                                                            title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                        <li class="social-icons-linkedin"><a href="http://www.linkedin.com/" target="_blank"
-                                                             title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-7">
-                        <p>© Copyright 2017. All Rights Reserved.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <nav id="sub-menu">
-                            <ul>
-                                <li><a href="page-faq.html">FAQ's</a></li>
-                                <li><a href="sitemap.html">Sitemap</a></li>
-                                <li><a href="contact-us.html">Contact</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    		{% include "templates/footer.html" %}
 </div>
 
 <!-- Vendor -->
