--- a/views/contact-us.html
+++ b/views/contact-us.html
@@ -141,7 +141,7 @@
 {% block current_page_script %}
 
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM0VFhswsa5iSiztF7MARARq7_ATjB254"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key={{consts.google_map_api_key}}"></script>
 <script>
 
     /*
@@ -166,8 +166,8 @@
     }];
 
     // Map Initial Location
-    var initLatitude = 48.87146;
-    var initLongitude = 2.35500;
+    var initLatitude = {{ consts.latitude }};
+    var initLongitude = {{ consts.longitude }};
 
     // Map Extended Settings
     var mapSettings = {
