--- a/views/index.html
+++ b/views/index.html
@@ -288,8 +288,8 @@
 
     // Map Markers
     var mapMarkers = [{
-        address: {{ consts.address_str }},
-        html: {{ consts.address_html }},
+        address: "{{ consts.address_str }}",
+        html: "{{ consts.address_html }}",
         icon: {
             image: "img/pin.png",
             iconsize: [26, 46],
