--- a/views/contact-us.html
+++ b/views/contact-us.html
@@ -155,8 +155,8 @@
 
     // Map Markers
     var mapMarkers = [{
-        address: "Fremont, CA 94555",
-        html: "<strong>San Francisco Bay Area Office</strong><br>Fremont, CA 94555",
+        address: "{{ consts.address_str }}",
+        html: "{{ consts.address_html }}",
         icon: {
             image: "img/pin.png",
             iconsize: [26, 46],
