--- a/views/contact-us.html
+++ b/views/contact-us.html
@@ -93,21 +93,18 @@
 
                 <h4 class="heading-primary">The <strong>Office</strong></h4>
                 <ul class="list list-icons list-icons-style-3 mt-xlg">
-                    <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> 1234 Street Name, City Name,
-                        United States
-                    </li>
-                    <li><i class="fa fa-phone"></i> <strong>Phone:</strong> (123) 456-789</li>
-                    <li><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:mail@example.com">mail@example.com</a>
-                    </li>
+                    <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> {{ consts.full_address }} </li>
+                    <li><i class="fa fa-phone"></i> <strong>Phone:</strong> {{ consts.contact_number }} </li>
+                    <li><i class="fa fa-envelope"></i> <strong>Email:</strong> {{ consts.email_address_href }} </li>
                 </ul>
 
                 <hr>
 
                 <h4 class="heading-primary">Business <strong>Hours</strong></h4>
                 <ul class="list list-icons list-dark mt-xlg">
-                    <li><i class="fa fa-clock-o"></i> Monday - Friday - 9am to 5pm</li>
-                    <li><i class="fa fa-clock-o"></i> Saturday - 9am to 2pm</li>
-                    <li><i class="fa fa-clock-o"></i> Sunday - Closed</li>
+                    <li><i class="fa fa-clock-o"></i> {{ consts.office_hour_weekday }} </li>
+                    <li><i class="fa fa-clock-o"></i> {{ consts.office_hour_saturday }} </li>
+                    <li><i class="fa fa-clock-o"></i> {{ consts.office_hour_sunday }} </li>
                 </ul>
 
             </div>
