--- a/views/index.html
+++ b/views/index.html
@@ -247,21 +247,18 @@
                 <div id="googlemaps" class="google-map small"></div>
 
                 <ul class="list list-icons list-icons-style-3 mt-xlg">
-                    <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> 34754 Siward Dr, Fremont,
-                        California 94555, United States
-                    </li>
-                    <li><i class="fa fa-phone"></i> <strong>Phone:</strong> (650) 787-3966</li>
-                    <li><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:mail@example.com">info@itcleanup.com</a>
-                    </li>
+                    <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> {{ consts.full_address }} </li>
+                    <li><i class="fa fa-phone"></i> <strong>Phone:</strong> {{ consts.contact_number }} </li>
+                    <li><i class="fa fa-envelope"></i> <strong>Email:</strong> {{ consts.email_address_href }} </li>
                 </ul>
 
                 <hr>
 
                 <h4>Business <strong>Hours</strong></h4>
                 <ul class="list list-icons list-dark mt-xlg">
-                    <li><i class="fa fa-clock-o"></i> Monday - Friday - 9am to 5pm</li>
-                    <li><i class="fa fa-clock-o"></i> Saturday - 9am to 2pm</li>
-                    <li><i class="fa fa-clock-o"></i> Sunday - Closed</li>
+                    <li><i class="fa fa-clock-o"></i> {{ consts.office_hour_weekday }} </li>
+                    <li><i class="fa fa-clock-o"></i> {{ consts.office_hour_saturday }} </li>
+                    <li><i class="fa fa-clock-o"></i> {{ consts.office_hour_sunday }} </li>
                 </ul>
             </div>
         </div>
