--- a/views/templates/consts.njk
+++ b/views/templates/consts.njk
@@ -3,3 +3,10 @@
 {% set address_str = "Fremont, CA 94555" %}
 {% set address_html = "<strong>San Francisco Bay Area Office</strong><br>Fremont, CA 94555" %}
 {% set google_map_api_key = "AIzaSyDM0VFhswsa5iSiztF7MARARq7_ATjB254" %}
+
+{% set full_address = "34754 Siward Dr, Fremont, California 94555, United States" %}
+{% set contact_number = "(650) 787-3966" %}
+{% set email_address_href = "<a href='"'mailto:info@itcleanup.com'"'>info@itcleanup.com</a>" %}
+{% set office_hour_weekday = "Monday - Friday - 9am to 5pm" %}
+{% set office_hour_saturday = "Saturday - 9am to 2pm" %}
+{% set office_hour_sunday = "Sunday - Closed" %}
