Fix email hrefs.

--- a/views/index.html
+++ b/views/index.html
@@ -249,7 +249,8 @@
                 <ul class="list list-icons list-icons-style-3 mt-xlg">
                     <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> {{ consts.full_address }} </li>
                     <li><i class="fa fa-phone"></i> <strong>Phone:</strong> {{ consts.contact_number }} </li>
-                    <li><i class="fa fa-envelope"></i> <strong>Email:</strong> {{ consts.email_address_href }} </li>
+                    <li><i class="fa fa-envelope"></i> <strong>Email:</strong>
+                        <a href="mailto:{{ consts.email_address_href }}">{{ consts.email_address_href }}</a> </li>
                 </ul>
 
                 <hr>
