--- a/views/templates/consts.njk
+++ b/views/templates/consts.njk
@@ -6,7 +6,7 @@
 
 {% set full_address = "34754 Siward Dr, Fremont, California 94555, United States" %}
 {% set contact_number = "(650) 787-3966" %}
-{% set email_address_href = "<a href=\\\"mailto:info@itcleanup.com\\\">info@itcleanup.com</a>" %}
+{% set email_address_href = "info@itcleanup.com" %}
 {% set office_hour_weekday = "Monday - Friday - 9am to 5pm" %}
 {% set office_hour_saturday = "Saturday - 9am to 2pm" %}
 {% set office_hour_sunday = "Sunday - Closed" %}
