--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -2309,13 +2309,13 @@ aside ul.nav-list > li > a {
 }
 
 .slider-container .top-label {
-	color: #FFF;
+	color: #FF4500;
 	font-size: 24px;
-	font-weight: 300;
+	font-weight: 600;
 }
 
 .slider-container .main-label {
-	color: #FFF;
+	color: #FF4500;
 	font-size: 62px;
 	line-height: 62px;
 	font-weight: 800;
@@ -2323,7 +2323,7 @@ aside ul.nav-list > li > a {
 }
 
 .slider-container .featured-label {
-	color: #FFF;
+	color: #FF4500;
 	font-size: 52px;
 	line-height: 52px;
 	font-weight: 800;
@@ -2331,10 +2331,10 @@ aside ul.nav-list > li > a {
 }
 
 .slider-container .bottom-label {
-	color: #FFF;
+	color: #FF4500;
 	font-size: 20px;
 	line-height: 20px;
-	font-weight: 300;
+	font-weight: 600;
 }
 
 .slider-container .blackboard-text {
