Fix up other pages.

--- a/views/templates/menu.html
+++ b/views/templates/menu.html
@@ -60,20 +60,17 @@
                                 <nav>
                                     <ul class="nav nav-pills" id="mainNav">
                                         <li class="">
-                                            <a href="/">
-                                                HOME
-                                            </a>
+                                            <a href="/">HOME</a>
                                         </li>
 
                                         <li class="">
-                                            <a href="/about-us">
-                                                About Us
-                                            </a>
+                                            <a href="/about-us">About Us</a>
                                         </li>
                                         <li class="">
-                                            <a href="/contact-us">
-                                                Contact Us
-                                            </a>
+                                            <a href="/page-faq">FAQ</a>
+                                        </li>
+                                        <li class="">
+                                            <a href="/contact-us">Contact Us</a>
                                         </li>
                                     </ul>
                                 </nav>
