--- a/views/contact-us.html
+++ b/views/contact-us.html
@@ -85,9 +85,7 @@
             <div class="col-md-6">
 
                 <h4 class="heading-primary mt-lg">Get in <strong>Touch</strong></h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet
-                    varius. In eu ipsum vitae velit congue iaculis vitae at risus. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit.</p>
+                <p>IT Cleanup is here to provide you with more information, any questions you may have.</p>
 
                 <hr>
 
@@ -116,25 +114,6 @@
 
 </div>
 
-<section class="call-to-action call-to-action-default with-button-arrow call-to-action-in-footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="call-to-action-content">
-                    <h3>Porto is <strong>everything</strong> you need to create an <strong>awesome</strong> website!
-                    </h3>
-                    <p>The <strong>#1 Selling</strong> HTML Site Template on ThemeForest</p>
-                </div>
-                <div class="call-to-action-btn">
-                    <a href="http://themeforest.net/item/porto-responsive-html5-template/4106987" target="_blank"
-                       class="btn btn-lg btn-primary">Buy Now!</a><span
-                        class="arrow hlb hidden-xs hidden-sm hidden-md" data-appear-animation="rotateInUpLeft"
-                        style="top: -12px;"></span>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 {% endblock %}
 {% block current_page_script %}
 
