--- a/views/page-faq.html
+++ b/views/page-faq.html
@@ -29,9 +29,7 @@
         <div class="row">
             <div class="col-md-12">
                 <p class="lead">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet.
-                    Nulla lacinia iaculis nulla non pulvinar. Sociis natoque penatibus et magnis dis parturient
-                    montes, nascetur ridiculus mus. Ut eu risus enim, ut pulvinar lectus. Sed hendrerit nibh metus.
+                    Find answers to frequently asked questions you may have about IT Cleanup.
                 </p>
             </div>
         </div>
@@ -43,121 +41,18 @@
 
                 <div class="toggle toggle-primary" data-plugin-toggle>
                     <section class="toggle active">
-                        <label>Curabitur eget leo at velit imperdiet vague iaculis vitaes?</label>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit
-                            imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor
-                            nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor, orci eros
-                            pellentesque odio, nec pellentesque erat ligula nec massa. Aenean consequat lorem ut
-                            felis ullamcorper posuere gravida tellus faucibus. Maecenas dolor elit, pulvinar eu
-                            vehicula eu, consequat et lacus. Duis et purus ipsum. In auctor mattis ipsum id
-                            molestie. Donec risus nulla, fringilla a rhoncus vitae, semper a massa. Vivamus
-                            ullamcorper, enim sit amet consequat laoreet, tortor tortor dictum urna, ut egestas urna
-                            ipsum nec libero. Nulla justo leo, molestie vel tempor nec, egestas at massa. Aenean
-                            pulvinar, felis porttitor iaculis pulvinar, odio orci sodales odio, ac pulvinar felis
-                            quam sit.</p>
+                        <label>Where are we located?</label>
+                        <p>We are located in San Francisco Bay Area. Our partner offices are in Singapore and New
+                            Delhi.</p>
                     </section>
 
                     <section class="toggle">
-                        <label>Curabitur eget leo at velit imperdiet viaculis vitaes?</label>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit
-                            imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor
-                            nunc, bibendum vitae semper a, volutpat eget massa.</p>
+                        <label>What do we do with the used IT equipments?</label>
+                        <p>We aggregate used IT equipment and then send them in shipments to our refurbishing offices in
+                            Singapore. From Singapore its purchased by local dealers who sells it in all Asian
+                            markets.</p>
                     </section>
 
-                    <section class="toggle">
-                        <label>Curabitur eget leo at velit imperdiet varius iaculis vitaes?</label>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit
-                            imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor
-                            nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor, orci eros
-                            pellentesque odio, nec pellentesque erat ligula nec massa. Aenean consequat lorem ut
-                            felis ullamcorper posuere gravida tellus faucibus. Maecenas dolor elit, pulvinar eu
-                            vehicula eu, consequat et lacus. Duis et purus ipsum. In auctor mattis ipsum id
-                            molestie. Donec risus nulla, fringilla a rhoncus vitae, semper a massa. Vivamus
-                            ullamcorper, enim sit amet consequat laoreet, tortor tortor dictum urna, ut egestas urna
-                            ipsum nec libero. Nulla justo leo, molestie vel tempor nec, egestas at massa. Aenean
-                            pulvinar, felis porttitor iaculis pulvinar, odio orci sodales odio, ac pulvinar felis
-                            quam sit.</p>
-                    </section>
-
-                    <section class="toggle">
-                        <label>Curabitur eget leo at velit imperdiet vague iaculis vitaes?</label>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit
-                            imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor
-                            nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor, orci eros
-                            pellentesque odio, nec pellentesque erat ligula nec massa. Aenean consequat lorem ut
-                            felis ullamcorper posuere gravida tellus faucibus. Maecenas dolor elit, pulvinar eu
-                            vehicula eu, consequat et lacus. Duis et purus ipsum. In auctor mattis ipsum id
-                            molestie. Donec risus nulla, fringilla a rhoncus vitae, semper a massa. Vivamus
-                            ullamcorper, enim sit amet consequat laoreet, tortor tortor dictum urna, ut egestas urna
-                            ipsum nec libero. Nulla justo leo, molestie vel tempor nec, egestas at massa. Aenean
-                            pulvinar, felis porttitor iaculis pulvinar, odio orci sodales odio, ac pulvinar felis
-                            quam sit.</p>
-                    </section>
-
-                    <section class="toggle">
-                        <label>Curabitur eget leo at velit imperdiet viaculis vitaes?</label>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit
-                            imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor
-                            nunc, bibendum vitae semper a, volutpat eget massa.</p>
-                    </section>
-
-                    <section class="toggle">
-                        <label>Curabitur eget leo at velit imperdiet varius iaculis vitaes?</label>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit
-                            imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor
-                            nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor, orci eros
-                            pellentesque odio, nec pellentesque erat ligula nec massa. Aenean consequat lorem ut
-                            felis ullamcorper posuere gravida tellus faucibus. Maecenas dolor elit, pulvinar eu
-                            vehicula eu, consequat et lacus. Duis et purus ipsum. In auctor mattis ipsum id
-                            molestie. Donec risus nulla, fringilla a rhoncus vitae, semper a massa. Vivamus
-                            ullamcorper, enim sit amet consequat laoreet, tortor tortor dictum urna, ut egestas urna
-                            ipsum nec libero. Nulla justo leo, molestie vel tempor nec, egestas at massa. Aenean
-                            pulvinar, felis porttitor iaculis pulvinar, odio orci sodales odio, ac pulvinar felis
-                            quam sit.</p>
-                    </section>
-
-                    <section class="toggle">
-                        <label>Curabitur eget leo at velit imperdiet vague iaculis vitaes?</label>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit
-                            imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor
-                            nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor, orci eros
-                            pellentesque odio, nec pellentesque erat ligula nec massa. Aenean consequat lorem ut
-                            felis ullamcorper posuere gravida tellus faucibus. Maecenas dolor elit, pulvinar eu
-                            vehicula eu, consequat et lacus. Duis et purus ipsum. In auctor mattis ipsum id
-                            molestie. Donec risus nulla, fringilla a rhoncus vitae, semper a massa. Vivamus
-                            ullamcorper, enim sit amet consequat laoreet, tortor tortor dictum urna, ut egestas urna
-                            ipsum nec libero. Nulla justo leo, molestie vel tempor nec, egestas at massa. Aenean
-                            pulvinar, felis porttitor iaculis pulvinar, odio orci sodales odio, ac pulvinar felis
-                            quam sit.</p>
-                    </section>
-
-                    <section class="toggle">
-                        <label>Curabitur eget leo at velit imperdiet viaculis vitaes?</label>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit
-                            imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor
-                            nunc, bibendum vitae semper a, volutpat eget massa.</p>
-                    </section>
-
-                    <section class="toggle">
-                        <label>Curabitur eget leo at velit imperdiet varius iaculis vitaes?</label>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit
-                            imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor
-                            nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor, orci eros
-                            pellentesque odio, nec pellentesque erat ligula nec massa. Aenean consequat lorem ut
-                            felis ullamcorper posuere gravida tellus faucibus. Maecenas dolor elit, pulvinar eu
-                            vehicula eu, consequat et lacus. Duis et purus ipsum. In auctor mattis ipsum id
-                            molestie. Donec risus nulla, fringilla a rhoncus vitae, semper a massa. Vivamus
-                            ullamcorper, enim sit amet consequat laoreet, tortor tortor dictum urna, ut egestas urna
-                            ipsum nec libero. Nulla justo leo, molestie vel tempor nec, egestas at massa. Aenean
-                            pulvinar, felis porttitor iaculis pulvinar, odio orci sodales odio, ac pulvinar felis
-                            quam sit.</p>
-                    </section>
                 </div>
 
             </div>
