--- a/views/sitemap.html
+++ b/views/sitemap.html
@@ -28,43 +28,25 @@
 
             <div class="col-md-4">
                 <ul class="nav nav-list mb-xl">
-                    <li><a href="index.html">Home</a></li>
-                    <li>
-                        <a href="#">About Us</a>
-                        <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">About Me</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="page-team.html">Team</a></li>
-                    <li><a href="page-services.html">Services</a></li>
-                    <li><a href="page-careers.html">Careers</a></li>
-                    <li><a href="page-our-office.html">Our Office</a></li>
-                    <li><a href="page-faq.html">FAQ</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about-us">About Us</a></li>
+                    <li><a href="/page-faq">FAQ</a></li>
+                    <li><a href="/contact-us">Contact Us</a></li>
                 </ul>
             </div>
 
             <div class="col-md-6 col-md-offset-2 hidden-xs">
                 <h2 class="mb-lg">Who <strong>We Are</strong></h2>
-                <p class="lead">Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc
-                    vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</p>
+                <p class="lead">We are buyers of used IT equipment. We refurbish the used IT equipment in Asia and sell
+                    it across Asia to ensure used IT equipment dont end up in landfills. We buy following items:</p>
                 <ul class="list list-icons mt-xl">
-                    <li><i class="fa fa-check"></i>Fusce sit amet orci quis arcu vestibulum vestibulum sed ut felis.
-                        Phasellus in risus quis lectus iaculis vulputate id quis nisl.
+                    <li><i class="fa fa-check"></i>Used Laptops.
                     </li>
-                    <li><i class="fa fa-check"></i>Phasellus in risus quis lectus iaculis vulputate id quis nisl.
+                    <li><i class="fa fa-check"></i>Pulled memory chips server and laptops.
                     </li>
-                    <li><i class="fa fa-check"></i>Fusce sit amet orci quis arcu vestibulum vestibulum sed ut felis.
+                    <li><i class="fa fa-check"></i>Pulled HDD and SSD.
                     </li>
-                    <li><i class="fa fa-check"></i>Phasellus in risus quis lectus iaculis vulputate id quis nisl.
-                    </li>
-                    <li><i class="fa fa-check"></i>Phasellus in risus quis lectus iaculis vulputate id quis nisl.
-                    </li>
-                    <li><i class="fa fa-check"></i>Fusce sit amet orci quis arcu vestibulum vestibulum sed ut felis.
-                    </li>
-                    <li><i class="fa fa-check"></i>Phasellus in risus quis lectus iaculis vulputate id quis nisl.
+                    <li><i class="fa fa-check"></i>Pulled CPUs.
                     </li>
                 </ul>
             </div>
