--- a/views/sitemap.njk
+++ b/views/sitemap.njk
@@ -1,4 +1,4 @@
-{% extends "templates/base.html" %}
+{% extends "templates/base.njk" %}
 
 {% block main_body %}
 
@@ -56,5 +56,5 @@
     </div>
 
 </div>
-{% include "templates/footer.html" %}
+{% include "templates/footer.njk" %}
 {% endblock %}
