--- a/views/contact-us.njk
+++ b/views/contact-us.njk
@@ -40,7 +40,7 @@
                 </div>
 
                 <h2 class="mb-sm mt-sm"><strong>Contact</strong> Us</h2>
-                <form id="contactForm" action="php/contact-form.php" method="POST">
+                <form id="contactForm" action="/contact/form" method="POST">
                     <div class="row">
                         <div class="form-group">
                             <div class="col-md-6">
