--- a/views/index.njk
+++ b/views/index.njk
@@ -93,7 +93,7 @@
                                 <div class="box-content">
                                     <h4 class="mb-none">Contact Us</h4>
                                     <p>Contact us or give us a call to discover how we can help.</p>
-                                    <form id="contactForm" action="php/contact-form.php" method="POST">
+                                    <form id="contactForm" action="/contact/form" method="POST">
                                         <div class="row">
                                             <div class="form-group">
                                                 <div class="col-md-6">
