--- a/views/templates/footer.njk
+++ b/views/templates/footer.njk
@@ -16,7 +16,7 @@
 
                     <div class="alert alert-danger hidden" id="newsletterError"></div>
 
-                    <form id="newsletterForm" action="php/newsletter-subscribe.php" method="POST">
+                    <form id="newsletterForm" action="/newsletter/subscribe" method="POST">
                         <div class="input-group">
                             <input class="form-control" placeholder="Email Address" name="newsletterEmail"
                                    id="newsletterEmail" type="text">
