--- a/views/templates/menu.njk
+++ b/views/templates/menu.njk
@@ -33,7 +33,8 @@
                                     <a href="/contact-us"><i class="fa fa-angle-right"></i> Contact Us</a>
                                 </li>
                                 <li>
-                                    <span class="ws-nowrap"><i class="fa fa-phone"></i> (650) 787-3966</span>
+                                    <span class="ws-nowrap"><i class="fa
+                                    fa-phone"></i> {{ consts.contact_number }}</span>
                                 </li>
                             </ul>
                         </nav>
