--- a/views/contact-us.njk
+++ b/views/contact-us.njk
@@ -74,6 +74,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="g-recaptcha" data-sitekey="6Ld6eS0UAAAAAI6gwxqfnoQucbHQx1mkp4SMbFg8"></div>
                     <div class="row">
                         <div class="col-md-12">
                             <input type="submit" value="Send Message" class="btn btn-primary btn-lg mb-xlg"
