--- a/views/index.njk
+++ b/views/index.njk
@@ -164,6 +164,10 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div class="g-recaptcha"
+                                                 data-sitekey="6Ld6eS0UAAAAAI6gwxqfnoQucbHQx1mkp4SMbFg8">
+                                            </div>
+
                                             <div class="row">
                                                 <div class="col-md-4">
                                                     <input type="submit"
