--- a/views/templates/footer_incs.njk
+++ b/views/templates/footer_incs.njk
@@ -13,6 +13,8 @@
 <script src="vendor/owl.carousel/owl.carousel.min.js"></script>
 <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 <script src="vendor/vide/vide.min.js"></script>
+<script src='https://www.google.com/recaptcha/api.js'></script>
+
 
 <!-- Theme Base, Components and Settings -->
 <script src="js/theme.js"></script>
