Add image gallery.

--- a/views/templates/menu.njk
+++ b/views/templates/menu.njk
@@ -71,6 +71,11 @@
                                             <a href="/page-faq">FAQ</a>
                                         </li>
                                         <li class="">
+                                            <a href="/image-gallery">
+                                                Image Gallery
+                                            </a>
+                                        </li>
+                                        <li class="">
                                             <a href="/contact-us">Contact Us</a>
                                         </li>
                                     </ul>
