--- a/views/templates/footer.njk
+++ b/views/templates/footer.njk
@@ -30,7 +30,7 @@
             <div class="col-md-3">
                 <h4>Latest Tweets</h4>
                 <div id="tweet" class="twitter" data-plugin-tweets
-                     data-plugin-options="{'username': '', 'count': 2}">
+                     data-plugin-options="{'username': 'itcleanup', 'count': 2}">
                     <p>Please wait...</p>
                 </div>
             </div>
