--- a/views/about-us.njk
+++ b/views/about-us.njk
@@ -104,34 +104,34 @@
                         think together we can make a difference.
                     </p>
                 </div>
-                <div class="col-md-4">
-                    <div class="featured-box featured-box-primary">
-                        <div class="box-content">
-                            <h4 class="text-uppercase">Behind the scenes</h4>
-                            <ul class="thumbnail-gallery" data-plugin-lightbox
-                                data-plugin-options="{'delegate': 'a', 'type': 'image', 'gallery': {'enabled': true}}">
-                                <li>
-                                    <a title="Vinod Gupta"
-                                       href="http://www.codervinod.com">
-                                        <span class="thumbnail mb-none">
-                                            <img src="img/benefits/profile-vinod.jpg"
-                                                 alt="">
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a title="Taruna Gupta"
-                                       href="http://www.codervinod.com">
-                                        <span class="thumbnail mb-none">
-                                            <img src="img/benefits/profile-taruna.jpg"
-                                                 alt="">
-                                        </span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+{#                <div class="col-md-4">#}
+{#                    <div class="featured-box featured-box-primary">#}
+{#                        <div class="box-content">#}
+{#                            <h4 class="text-uppercase">Behind the scenes</h4>#}
+{#                            <ul class="thumbnail-gallery" data-plugin-lightbox#}
+{#                                data-plugin-options="{'delegate': 'a', 'type': 'image', 'gallery': {'enabled': true}}">#}
+{#                                <li>#}
+{#                                    <a title="Vinod Gupta"#}
+{#                                       href="http://www.codervinod.com">#}
+{#                                        <span class="thumbnail mb-none">#}
+{#                                            <img src="img/benefits/profile-vinod.jpg"#}
+{#                                                 alt="">#}
+{#                                        </span>#}
+{#                                    </a>#}
+{#                                </li>#}
+{#                                <li>#}
+{#                                    <a title="Taruna Gupta"#}
+{#                                       href="http://www.codervinod.com">#}
+{#                                        <span class="thumbnail mb-none">#}
+{#                                            <img src="img/benefits/profile-taruna.jpg"#}
+{#                                                 alt="">#}
+{#                                        </span>#}
+{#                                    </a>#}
+{#                                </li>#}
+{#                            </ul>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
             </div>
 
             <div class="row">
